# windows-hotkeys

./: Cargo.toml  LICENSE  README.md
examples/: exit-loop-hotkey.rs  intercept_event_loop.rs  minimal.rs  multithreaded.rs  no_repeat.rs  simple.rs  vkeys-and-modkeys.rs
examples/spongebob-case/: Cargo.toml  README.md
examples/spongebob-case/src/: main.rs
src/: error.rs  keys.rs  lib.rs  singlethreaded.rs  threadsafe.rs
src/keys/: modkey.rs  vkey.rs
