[package]
name = "windows-hotkeys"
version = "0.2.1"
authors = ["Daniel M <danielm-github@dnml.de>"]
license = "MIT"
repository = "https://github.com/dnlmlr/windows-hotkeys"
homepage = "https://github.com/dnlmlr/windows-hotkeys"
documentation = "https://docs.rs/crate/windows-hotkeys/0.2.1"
readme = "README.md"
description = "A simple thread safe abstraction to manage system-wide hotkeys on windows"
categories = ["os::windows-apis", "api-bindings"]
keywords = ["hotkey", "windows", "system-wide", "global", "win32", ]
edition = "2021"

[features]
default = ["threadsafe"]

# Enable the threadsafe implementation that uses an extra backend thread and channel communication
# to work around the same-thread limitation of the windows event queue
threadsafe = []

[dependencies]
thiserror = "1.0.48"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
